--- a/js/basic/hoisting/index.html
+++ b/js/basic/hoisting/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <!-- <h1>hoisting</h1> -->
-    <button>click me</button>
+    <!-- <button>click me</button> -->
+    <input type="text">
+    <h1></h1>
 </body>
 
 <script src="app.js"></script>
