--- a/js/basic/JS-Project/Music-app/index.html
+++ b/js/basic/JS-Project/Music-app/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <section id="container">
+        <h1>Music Player</h1>
+        <ul id="songList">
+
+        </ul>
+        <div id="play-section">
+           <div class="progres">
+                <span id="currentTime">0:00</span>
+                <input type="range" id="progress" value="0" step="1">
+                <span id="totalDuration">0:00</span>
+           </div>
+
+            <div class="sam">
+                <button id="backward-btn"> <i class="fa-solid fa-backward"></i> </button>
+                <button id="play-btn"> <i class="fa-solid fa-play"></i> </button>  
+                <button id="forward-btn"> <i class="fa-solid fa-forward"></i> </button>
+            </div>
+        </div>
+    </section>
+    <script src="app.js"></script>
 </body>
 </html>
