--- a/js/basic/Fetch-API/index.html
+++ b/js/basic/Fetch-API/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <h1>fetch Api</h1>
+    <h1>Crud using Fetch Api</h1>
+    <div class="container">
+        <button type="button" class="btn btn-primary" id="getPost">Get</button>
+        <button type="button" class="btn btn-danger"  id="createPost">Create</button>
+        <button type="button" class="btn btn-info"  id="updatePost">Put</button>
+        <button type="button" class="btn btn-dark"  id="patchPost">Patch</button>
+        <button type="button" class="btn btn-success"  id="deletePost">Delete</button>
+    </div>
+    <div id="showtableData"></div>
+<script src="app.js"></script>
 </body>
 </html>
 
