--- a/js/basic/JS-Project/Regenerate -code/index.html
+++ b/js/basic/JS-Project/Regenerate -code/index.html
@@ -9,7 +9,8 @@
     <h1>Regenerate Code</h1>
 
     <input type="text" id="input" placeholder="Enter input">
-    <button id="btn">Regenerate</button>
+    <button id="btn1">send</button>
+    <button id="btn2">Regenerate</button>
     <p id="code"></p>
 
 
