--- a/let-var-const-scope/index.html
+++ b/let-var-const-scope/index.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Let ,Var, Const and Scope</h1>
-
-
+    <h1>let, var, const</h1>
     <script src="app.js"></script>
 </body>
 </html>
