--- a/js/basic/JS-Project/Todo-List/index.html
+++ b/js/basic/JS-Project/Todo-List/index.html
@@ -9,19 +9,19 @@
    
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="row">
+    <div class="container mt-5 ">
+        <div class="row ">
             <div class="col-md-4  mx-auto bg">
-                <input type="text" class="form-control"  id="input" placeholder="Add a new task">
+                <input type="text" class="form-control w-100 border-0 mt-3"  id="input" placeholder="Add a new task">
                 <div class="filters mt-3 d-flex justify-content-between">
-                    <button id="all" class="btn btn-primary">All</button>
-                    <button id="pending" class="btn btn-primary">Pending</button>
-                    <button id="completed" class="btn btn-primary">Completed</button>
+                    <button id="all" class="btn active">All</button>
+                    <button id="pending" class="btn ">Pending</button>
+                    <button id="completed" class="btn ">Completed</button>
                     <button id="clear" class="btn btn-danger">Clear All</button>
                 </div>
 
                 <ul class="task-box mt-3" style="list-style: none;">
-                    <!-- <li class="task d-flex align-items-center">
+                <!-- <li class="task d-flex align-items-center">
                         <input type="checkbox" id="1" class="one">
                         <label for="1" class="flex-grow-1 label">Html</label>
                         <div class="settings d-flex">
