--- a/js/basic/Js-Features/clock/index.html
+++ b/js/basic/Js-Features/clock/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="input">
-    <button id="btn">Generate QR</button>
-    <div id="Qrcode"></div>
+    <div class="container">
+        <h1 class="text-center">Digital Clock</h1>
+        <div id="timer"></div>
+    </div>
 
     <script src="app.js"></script>
 </body>
 </html>
-
